
set (OP_INTROSPECTOR_EXECUTABLE introspector)

add_executable (${OP_INTROSPECTOR_EXECUTABLE} main.cxx)

target_link_libraries (
  ${OP_INTROSPECTOR_EXECUTABLE}
  ${OP_DOXMLPARSER_LIBRARY}
  ${OP_QTOOLS_LIBRARY}
)

target_include_directories (
  ${OP_INTROSPECTOR_EXECUTABLE}
  PUBLIC  ${OP_QTOOLS_LIBRARY} ${OP_DOXMLPARSER_DIR}
  PRIVATE ${OP_QTOOLS_LIBRARY} ${OP_DOXMLPARSER_DIR}
)


